# xmodem.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
src/: lib.rs
tests/: external.rs  loopback.rs
