[package]
name = "xmodem"
version = "0.4.0"
authors = ["Allen Welkie <allen.welkie@gmail.com>",
    "Oxide Computer Co. <https://oxide.computer/>"]
keywords = ["xmodem", "serial", "no_std"]
repository = "https://github.com/oxidecomputer/xmodem.rs"
license = "MIT"
description = "An implementation of the XMODEM file-transfer protocol."
edition = "2018"

[dependencies]
log = { version = "^0.3", default-features = false }
crc16 = "^0.3"

[dev-dependencies]
tempfile = "^2.0"
rand = "^0.3"

[features]
std = []
default = ["std"]
