[package]
name = "xmodem"
version = "0.4.0"
authors = ["Allen Welkie <allen.welkie@gmail.com>"]
keywords = ["xmodem", "serial", "no_std"]
repository = "https://github.com/awelkie/xmodem.rs"
license = "MIT"
description = "An implementation of the XMODEM file-transfer protocol."
edition = "2024"

[dependencies]
log = { version = "0.4", default-features = false }
crc16 = "0.4"

[dev-dependencies]
tempfile = "3.0"
rand = "0.9"

[features]
std = []
default = ["std"]
